src/pages/blog.module.css
.bTitle {
    text-align: center;
    margin: 2vh 0;
}

.blogsContainer {
    width: 100%;
}

.theBlogs {
    width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
}

.blogCard {
    text-align: center;
    width: 29%;
    margin: 2%;
    border: 2px solid var(--the-white);
    transition: 1s;
    cursor: pointer;
    text-decoration: none;
    color: var(--rich-purple);
    position: relative;
}

.blogCard:hover {
    border-radius: 5px;
    border: 2px solid #ffffff;
    color: var(--main-color);
    -webkit-box-shadow: 0px 0px 30px -5px var(--the-black);
    -moz-box-shadow: 0px 0px 30px -5px var(--the-black);
    box-shadow: 0px 0px 30px -5px var(--the-black);
}

.blogImageContainer {
    width: 90%;
    margin: 20px auto;
    height: 200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    transition: 1s;
    -webkit-box-shadow: inset 0px 0px 10px -5px var(--the-black);
    -moz-box-shadow: inset 0px 0px 10px -5px var(--the-black);
    box-shadow: inset 0px 0px 10px -5px var(--the-black);
}

.blogImageContainer:hover {
    width: 90%;
    margin: 20px auto;
    -webkit-box-shadow: inset 0px 0px 5px -5px var(--the-black);
    -moz-box-shadow: inset 0px 0px 5px -5px var(--the-black);
    box-shadow: inset 0px 0px 5px -5px var(--the-black);
}

.excerpt {
    font-size: 12px;
    width: 80%;
    margin: auto;
}

